Fix competency on dark mode

--- a/style.css
+++ b/style.css
@@ -967,7 +967,7 @@ All the dark mode stuff
     color: aliceblue;
   }
 
-  .competency {
+  .light-mode .competency {
     color: #000;
   }
 }
